--- a/src/package.json
+++ b/src/package.json
@@ -1,8 +1,13 @@
 {
   "name": "parchment-light",
+  "version": "1.3.0",
   "displayName": "Parchment Light Theme",
   "description": "Almost monochromatic, light color theme with highlighted comments",
-  "version": "1.3.0",
+  "publisher": "johv",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/c2d7fa/vscode-parchment-light.git"
+  },
   "engines": {
     "vscode": "^1.45.0"
   },
