--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,15 @@
 {
   "name": "parchment-light",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "displayName": "Parchment Light Theme",
   "description": "Almost monochromatic, light color theme with highlighted comments",
   "publisher": "johv",
+  "keywords": [
+    "color-theme",
+    "theme",
+    "light",
+    "monochrome"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/c2d7fa/vscode-parchment-light.git"
