Add icon to extension
Closes #4

--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,10 @@
 {
   "name": "parchment-light",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "displayName": "Parchment Light Theme",
   "description": "Almost monochromatic, light color theme with highlighted comments",
   "publisher": "johv",
+  "icon": "icon.png",
   "keywords": [
     "color-theme",
     "theme",
