--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,8 +12,7 @@ jobs:
       - name: Build extension
         run: |
           export PATH="$PATH:$HOME/.local/bin"
-          pip3 install pipenv
-          pipenv sync
+          pip3 install hsluv
           ./build.sh
       - name: Publish extension
         env:
