Fixed typo in description

--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "parchment-light",
   "version": "1.10.0",
   "displayName": "Parchment (monochrome themes)",
-  "description": "Almost monochromatic, light and dark color theme with highlighted comments",
+  "description": "Almost monochromatic, light and dark color themes with highlighted comments",
   "publisher": "johv",
   "icon": "icon.png",
   "keywords": [
